[tool.poetry]
name = "wave-function-collapse"
version = "0.1.0"
description = ""
authors = ["Matteo Barbieri <neopard@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
